<resources>
    <string name="app_name">Attendance Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_report">Report</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_err_network">Network Error</string>

    <string name="login_err_email">Please provide a valid email address</string>
    <string name="login_err_password">Please provide your password</string>
    <string name="login_err_auth">Invalid login credentials</string>

    <string name="home_leaves_per_month">%d leaves this month</string>

    <string name="ppu_initial_title">Where do you want to choose picture?</string>
    <string name="ppu_initial_btn_camera">Take Picture</string>
    <string name="ppu_initial_btn_gallery">Camera Roll</string>

    <string name="ppu_after_picture_selected_title">Use this picture?</string>
    <string name="ppu_after_picture_selected_btn_camera">Cancel</string>
    <string name="ppu_after_picture_selected_btn_gallery">Set Profile Pic</string>

    <string name="profile_btn_update_profile">Update Profile</string>
    <string name="profile_btn_change_password">Change Password</string>
    <string name="profile_btn_log_out">Log out</string>
</resources>
